Adding images to essays
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1220 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-essays.css
+++ b/WebContent/styles/assessment-essays.css
@@ -129,3 +129,20 @@ table.essay-prev-next td.essay-next a {
 table.essay-prev-next td.essay-prev a:hover,
 table.essay-prev-next td.essay-next a:hover {
 	text-decoration: underline; }
+	
+div.essay-image-right {
+	float: right;
+	margin: 3px 0px 5px 10px; 
+	border: 1px solid Black; }
+
+div.essay-image-left {
+	float: left;
+	margin: 3px 10px 5px 0px; 
+	border: 1px solid Black; }
+
+div.essay-image-left div.caption,
+div.essay-image-right div.caption {
+	background-color: #444444;
+	color: White;
+	text-align: center; 
+	padding: 2px 5px 1px 5px; }
