Changing the permlink in database to use real URL
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1227 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/popup-permlink.css
+++ b/WebContent/styles/popup-permlink.css
@@ -9,15 +9,17 @@ div.permlink-title {
 	border-bottom: 1px solid #CCCCCC; }
 
 div.permlink-link {
-	border: 1px solid #CCCCCC;
-	padding: 5px 10px 5px 10px;
-	background-color: #EEEEEE;
-	font-weight: bold;
 	margin-left: 9px;
 	margin-right: 9px;
 	margin-top: 10px;
 	margin-bottom: 10px; }
 	
+div.permlink-link textarea {
+	width: 100%;
+	border: 1px solid #CCCCCC;
+	background-color: #EEEEEE;
+	font-weight: bold; }
+
 div.permlink-desc {
 	margin-left: 10px;
 	margin-right: 10px; }
