--- a/WebContent/styles/assessment-essays.css
+++ b/WebContent/styles/assessment-essays.css
@@ -146,3 +146,13 @@ div.essay-image-right div.caption {
 	color: White;
 	text-align: center; 
 	padding: 2px 5px 1px 5px; }
+
+div.essay-note {
+	xborder-top: 1px solid Black; 
+	border-bottom: 1px solid Black;
+	padding-bottom: 10px; }	
+
+	
+p.note{
+	font-size:smaller;
+}
