*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1268 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/section-index.css
+++ b/WebContent/styles/section-index.css
@@ -3,7 +3,17 @@ div#content {
 	margin-left: 250px;
 	width: 640px; }
 
+h1 {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+	margin-left: 15px; }
+	
 h2 {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+	margin-left: 15px; }
+	
+h3 {
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	margin-left: 15px; }
