--- a/WebContent/styles/database-search-query.css
+++ b/WebContent/styles/database-search-query.css
@@ -222,3 +222,9 @@ td.history-list-icon-text:hover {
 
 td.history-list-icon-space {
 	width: 2px; }	
+	
+td.query-checkbox-first {
+	}
+	
+td.query-checkbox-second {
+	padding-left: 10px;	}
