Capping percentual variables in Database / Timeline to 100%
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1294 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-search-graph.css
+++ b/WebContent/styles/database-search-graph.css
@@ -1,6 +1,6 @@
 div.database-graph-options {
-	background-color: #ECD698;
 	border: 1px solid #895D03;
+	background-color: #EED083;
 	padding: 5px 10px 5px 10px;	}
 
 div.event-line-left-selector {
