--- a/WebContent/styles/database-search-table.css
+++ b/WebContent/styles/database-search-table.css
@@ -10,7 +10,7 @@ table.grid td {
 table.grid th {
 	padding: 5px;
 	text-align: left;
-	background-color: #ECD698; }
+	background-color: #EED083; }
 
 table.grid th a {
 	text-decoration: none;
