Moving voyage detail to the main search page, fixing sources in detail
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1316 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-tabs.css
+++ b/WebContent/styles/database-tabs.css
@@ -1,12 +1,14 @@
 div.tabs-body {
-	border: 1px solid #8A5D04; 
-}
+	border: 1px solid #8A5D04; }
 
 td.tabs-tab-left {
 	background-image: url(../images/database-tabs-normal-left.png); }
 	
 td.tabs-tab-middle {
 	background-image: url(../images/database-tabs-normal-center.png); }
+
+td.tabs-tab-middle:hover {
+	color: #895D03; }
 
 td.tabs-tab-right {
 	background-image: url(../images/database-tabs-normal-right.png); }
@@ -22,5 +24,17 @@ td.tabs-tab-right-selected {
 
 div.tabs-selection {
 	background-image: url(../images/database-tabs-bg.png);
-	background-repeat: repeat-x;
-}
+	background-repeat: repeat-x; }
+	
+td.back-to-list {
+	text-align: center;
+	vertical-align: bottom;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 22px;
+	background-repeat: no-repeat;
+	cursor: pointer;
+	background-image: url(../images/database-tabs-back-arrow.png); }
+	
+td.back-to-list:hover {
+	color: #895D03; }
