--- a/WebContent/styles/tabs.css
+++ b/WebContent/styles/tabs.css
@@ -28,9 +28,7 @@ td.tabs-tab-right {
 	overflow: hidden; }
 
 td.tabs-tab-filler {
-	width: 5px;
-}
+	width: 5px; }
 
 td.tabs-tab-first-filler {
-	width: 10px;
-}
+	width: 10px; }
