*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1319 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-voyage.css
+++ b/WebContent/styles/database-voyage.css
@@ -16,6 +16,7 @@ table.detail {
 
 td.detail-label-main,
 td.detail-label {
+	white-space: nowrap;
 	border: 1px solid #895D03;
 	padding: 5px;
 	font-weight: bold;
