Fixing some small bugs on timeline in IE and Safari
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1337 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-estimates.css
+++ b/WebContent/styles/assessment-estimates.css
@@ -137,10 +137,14 @@ div.event-line-graph {
 	
 div.event-line-selector {
 	-moz-opacity: 0.3;
+	opacity: 0.3;
+	filter: alpha(opacity = 30);
 	background-color: #A9E1E2; }
 
 div.event-line-indicator {
 	-moz-opacity: 0.3;
+	opacity: 0.3;
+	filter: alpha(opacity = 30);
 	background-color: #333333; }
 	
 div.event-line-indicator-container {
