Fixing some small bugs on timeline in IE and Safari
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1338 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-search-graph.css
+++ b/WebContent/styles/database-search-graph.css
@@ -27,11 +27,13 @@ div.event-line-graph {
 	-background-color: #EEFFFF; }
 	
 div.event-line-selector {
-	-moz-opacity: 0.5;
+	opacity: 0.5;
+	filter: alpha(opacity = 50);
 	background-color: #F1E7C8; }
 
 div.event-line-indicator {
-	-moz-opacity: 0.3;
+	opacity: 0.3;
+	filter: alpha(opacity = 30);
 	background-color: #333333; }
 	
 div.event-line-indicator-container {
@@ -44,8 +46,7 @@ div.event-line-indicator-label {
 
 .timeline-color {
 	background-color: #F1E7C8;
-	background-color: #CA4223;
-}
+	background-color: #CA4223; }
 
 div.event-line-graph-container,
 div.event-line-selector-container {
