--- a/WebContent/styles/help-faq.css
+++ b/WebContent/styles/help-faq.css
@@ -15,6 +15,9 @@ input.faq-search-box {
 
 /* faq */
 
+div.faq-list a {
+	color: #008CA5 }
+
 div.faq-list {
 	position: fixed;
 	top: 110px;
@@ -27,7 +30,7 @@ span.search-keyword {
 	padding: 0px 2px 0px 2px;
 	background-color: #FFFFAA; }
 
-div.faq-category {
+div.faq-main div.faq-category {
 	border-bottom: 1px solid #B5DEE6;
 	font-size: 11pt;
 	font-weight: bold;
@@ -36,23 +39,35 @@ div.faq-category {
 	margin-top: 10pt;
 	margin-bottom: 2pt; }
 	
-div.faq {
+div.faq-main div.faq {
 	margin-left: 25px;
 	margin-right: 10px; }
 
-div.faq-question {
+div.faq-main div.faq-question {
 	line-height: 140%;
 	font-weight: bold;
 	margin-top: 10pt;
 	margin-bottom: 5pt; }
 
-div.faq-answer {
+div.faq-main div.faq-answer {
 	}
 
-div.faq-answer p {
+div.faq-main div.faq-answer p {
 	margin-top: 0pt;
 	margin-bottom: 5pt;
 	line-height: 140%; }
 	
-div.faq-answer a {
-	color: #008CA5 }
+ul.faq-toc {
+	padding: 0px;
+	margin: 10pt 0px 0px 40px; }
+	
+li.faq-category {
+	padding: 0px;
+	margin: 0px;
+	line-height: 140%; }
+	
+li.faq-category a {
+	text-decoration: none; }
+	
+li.faq-category a:hover {
+	text-decoration: underline; }
