*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1379 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-info.css
+++ b/WebContent/styles/database-info.css
@@ -146,3 +146,13 @@ td.simple-box-32 div {
 	width: 6px;
 	height: 6px;
 	overflow: hidden; }
+	
+td.number {
+	padding-right:20px;
+	text-align: right;
+}
+
+span.superscript{
+	vertical-align:super;
+	font-size: 6pt;
+}
