Polishing intro maps
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1392 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-essays.css
+++ b/WebContent/styles/assessment-essays.css
@@ -151,8 +151,6 @@ div.essay-note {
 	xborder-top: 1px solid Black; 
 	border-bottom: 1px solid Black;
 	padding-bottom: 10px; }	
-
 	
 p.note{
-	font-size:smaller;
-}
+	font-size:smaller; }
