Minor formatting updates of intro maps
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1397 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-intro-maps.css
+++ b/WebContent/styles/assessment-intro-maps.css
@@ -71,7 +71,8 @@ div.map-caption a {
 	padding: 4px 5px 4px 20px; }
 
 div.map-caption a:hover {
-	text-decoration: underline; }
+	background-image: url(../images/intro-maps-expand-selected.png);
+	color: #B8E7E8; }
 
 div.map-description {
 	margin: 15px 0px 15px 15px;	
