--- a/WebContent/styles/database-search-tableview.css
+++ b/WebContent/styles/database-search-tableview.css
@@ -23,7 +23,12 @@ div.estimates-table table.simple-table td.tbl-total {
 	font-weight: bold;
 	background-color: #ECD698; }
 
-div.estimates-table table.simple-table td.simple-table-row-label,
-div.estimates-table table.simple-table td.simple-table-col-label {
+div.estimates-table table.simple-table td.tbl-total-row-label {
 	background-color: #ECD698;
+	font-weight: bold;
 	text-align: left; }
+	
+div.estimates-table table.simple-table td.tbl-total-col-label {
+	background-color: #ECD698;
+	font-weight: bold;
+	text-align: right; }
