*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1443 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-info.css
+++ b/WebContent/styles/database-info.css
@@ -175,14 +175,14 @@ td.method-next {
 	text-align: right; }
 
 table.method-prev-next td.method-prev a {
-	background-image: url(../images/assessment-icon-arrow-left.png);
+	background-image: url(../images/database-icon-arrow-left.PNG);
 	background-position: left center;
 	background-repeat: no-repeat;
 	padding-left: 10px;
 	text-decoration: none; }
 	
 table.method-prev-next td.method-next a {
-	background-image: url(../images/assessment-icon-arrow-right.png);
+	background-image: url(../images/database-icon-arrow-right.PNG);
 	background-position: right center;
 	background-repeat: no-repeat;
 	padding-right: 10px;
