Finalising landing pages
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1516 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/education-index.css
+++ b/WebContent/styles/education-index.css
@@ -1,21 +1,21 @@
 div#index-intro-band {
-	background-color: #7B919C; }
+	background-color: #88AACC; }
 
 div#section-titles {
-	background-color: #7B919C; }
+	background-color: #88AACC; }
 
 div#section-titles a {
 	color: White; }
 
 div#section-titles a:hover {
-	color: #C6ECED; }
+	color: #D6E1EF; }
 	
 td.section-title {
 	border-left: 1px solid White; }
 
 td.section-desc {
-	border-left: 1px solid #7B919C; }
+	border-left: 1px solid #88AACC; }
 
 td.section-title,
 td.section-desc {
-	width: 120px; }
+	width: 300px; }
