--- a/WebContent/styles/assessment-index.css
+++ b/WebContent/styles/assessment-index.css
@@ -1,26 +1,26 @@
 body {
 	background-position: 0px 60px;
-	background-image: url(../images/database-bg.png);
+	background-image: url(../images/assessment-bg.png);
 	background-repeat: repeat-x; }
 
 div#index-intro-band {
-	background-color: #AA8833; }
+	background-color: #4AA9BA; }
 
 div#section-titles {
-	background-color: #AA8833; }
+	background-color: #4AA9BA; }
 
 div#section-titles a {
 	color: White; }
 
 div#section-titles a:hover {
-	color: #F4E1AF; }
+	color: #C6ECED; }
 	
 td.section-title {
 	border-left: 1px solid White; }
 
 td.section-desc {
-	border-left: 1px solid #AA8833; }
+	border-left: 1px solid #4AA9BA; }
 
 td.section-title,
 td.section-desc {
-	width: 200px; }
+	width: 250px; }
