--- a/WebContent/styles/resources-index.css
+++ b/WebContent/styles/resources-index.css
@@ -1,4 +1,21 @@
-body {
-	background-position: 0px 60px;
-	background-image: url(../images/resources-bg.png);
-	background-repeat: repeat-x; }
+div#index-intro-band {
+	background-color: #669988; }
+
+div#section-titles {
+	background-color: #669988; }
+
+div#section-titles a {
+	color: White; }
+
+div#section-titles a:hover {
+	color: #CAE6DB; }
+	
+td.section-title {
+	border-left: 1px solid White; }
+
+td.section-desc {
+	border-left: 1px solid #669988; }
+
+td.section-title,
+td.section-desc {
+	width: 250px; }
