--- a/WebContent/styles/assessment-estimates.css
+++ b/WebContent/styles/assessment-estimates.css
@@ -401,7 +401,14 @@ td.pager-back a:hover	{
 /***********************************
 * map legend
 ***********************************/
-	
+div.map-legend-note{
+	font-style:italic;
+	padding-bottom: 2px;
+	padding-top: 2px;
+	padding-left: 5px;
+	padding-right: 10px;
+}
+
 div.map-legend-section-title {
 	background-color: #CCEEEE;
 	font-weight: bold;
