--- a/WebContent/styles/database-search.css
+++ b/WebContent/styles/database-search.css
@@ -69,6 +69,14 @@ div.detailTab {
 	padding-right: 5px;
 }
 	
+div.map-legend-note{
+	font-style:italic;
+	padding-bottom: 2px;
+	padding-top: 2px;
+	padding-left: 5px;
+	padding-right: 10px;
+}
+
 div.map-legend-section-title {
 	background-color: #F2E3B8;
 	font-weight: bold;
