*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1549 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-info.css
+++ b/WebContent/styles/database-info.css
@@ -22,7 +22,8 @@ div.left-menu-box a {
 div.left-menu-box a:hover {
 	background-color: #FFF5C2; }
 
-div.secondary-menu-item-0 a {
+div.secondary-menu-item-0 a,
+div.secondary-menu-item-0-selected a{
 	background-image: url(../images/secondary-menu-symbol-0.png);
 	background-repeat: no-repeat;
 	background-position: 2px 4px;
