--- a/WebContent/styles/resources-slaves.css
+++ b/WebContent/styles/resources-slaves.css
@@ -56,7 +56,7 @@ div.lookup-checkbox-list {
 	/* background-color: #DCEFE7; */
 	margin-top: 5px;
 	padding: 3px;
-	/*width: 230px;*/
+	width: 240px;
 	height: 200px;
 	overflow: scroll; }
 
